@@ -8,98 +8,68 @@
 <body>
 
 <metal:content-core fill-slot="content-core">
-    <metal:block define-macro="content-core">
+    <metal:block define-macro="content-core"
+        tal:define="assignees view/get_assignees;
+                    epic view/get_epic;
+                    timing view/timing">
 
-      <div class="row">
-        <div class="cell width-8 position-0">
-          <div tal:content="context/text" />
-          <tal:block condition="view/has_epic">
-          <dt i18n:translate="">Epic</dt>
-          <dd>
-            <a href=""
-               title=""
-               tal:attributes="href context/epic/to_object/absolute_url;
-                               title context/epic/to_object/description"
-               tal:content="context/epic/to_object/title"></a>
-          </dd>
-          </tal:block>
+      <metal:timing
+        use-macro="context/simpemanagement-macros/story-timing" />
 
-        </div>
-        <div class="cell width-8 position-8">
-          <table class="listing" summary="Timing">
-            <thead>
-              <tr>
-                <th class="nosort column" i18n:translate="">Estimate</th>
-                <th class="nosort column" i18n:translate="">Resource time</th>
-                <th class="nosort column" i18n:translate="">Difference</th>
-                <th class="nosort column" i18n:translate="">Assignees</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr tal:define="timing view/timing">
-                <td tal:content="timing/estimate"></td>
-                <td tal:content="timing/resource_time"></td>
-                <td tal:content="timing/difference"
-                    tal:attributes="class timing/status"></td>
-                <td>
-                  <ul class="assignees" tal:condition="context/assigned_to">
-                    <li tal:repeat="assignee view/get_assignees">
-                      <a tal:content="assignee/fullname"
-                        tal:attributes="href assignee/href" /></li>
-                  </ul>
-                  <em tal:condition="not:context/assigned_to"
-                    i18n:translate="">
-                    Unassigned
-                  </em>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="row booking"
+      <div tal:content="context/text" />
+      <metal:epic
+        use-macro="context/simpemanagement-macros/epic" />
+
+      <metal:assignes
+          use-macro="context/simpemanagement-macros/assignees" />
+
+      <div class="booking"
         tal:define="booking_list view/get_booking">
-        <div class="cell position-0 width-full">
-          <table class="listing"
-            tal:condition="booking_list">
-            <thead>
-              <tr>
-                <th i18n:translate="">Title</th>
-                <th i18n:translate="">Date</th>
-                <th i18n:translate="">Time</th>
-                <th i18n:translate="">Assignee</th>
-                <th i18n:translate="">Related</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr tal:repeat="booking booking_list">
-                <td>
-                  <div class="collassible">
-                  <h4><a tal:attributes="href booking/href"
-                    tal:content="booking/title"/>
-                  </h4>
-                  <p class="discreet"
-                    tal:content="booking/description" /></td>
-                <td tal:content="booking/date" />
-                <td tal:content="booking/time" />
-                <td><a tal:attributes="href booking/creator/href"
-                  tal:content="booking/creator/fullname" />
-                <td tal:define="related booking/related">
-                  <span tal:condition="related">
-                    <a href=""
-                      tal:attributes="
-                        href related/href;
-                        title related/description"
-                      tal:content="related/title"/>
-                  </span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <div id="booking-form">
-            <h2 i18n:translate="">Add Booking</h2>
-            <div tal:content="structure view/form_contents" />
-          </div>
+        <table class="listing"
+          tal:condition="booking_list">
+          <thead>
+            <tr>
+              <th i18n:translate="">Date</th>
+              <th i18n:translate="">Title</th>
+              <th i18n:translate="">Time</th>
+              <th i18n:translate="">Assignee</th>
+              <th i18n:translate="">Related</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr tal:repeat="booking booking_list">
+              <td tal:content="booking/date" />
+              <td class="booking-details">
+                <h4><a tal:attributes="href booking/href"
+                  tal:content="booking/title"/>
+                </h4>
+                <dl class="collapsible collapsedOnLoad"
+                    tal:condition="booking/description">
+                  <dt class="collapsibleHeader" i18n:translate="">Details</dt>
+                  <dd class="collapsibleContent">
+                    <p class="discreet"
+                        tal:content="booking/description" />
+                  </dd>
+                </dl>
+              </td>
+              <td class="actual_hours" tal:content="booking/time" />
+              <td><a tal:attributes="href booking/creator/href"
+                tal:content="booking/creator/fullname" />
+              <td tal:define="related booking/related">
+                <span tal:condition="related">
+                  <a href=""
+                    tal:attributes="
+                      href related/href;
+                      title related/description"
+                    tal:content="related/title"/>
+                </span>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div id="booking-form">
+          <h2 i18n:translate="">Add Booking</h2>
+          <div tal:content="structure view/form_contents" />
         </div>
       </div>
     </metal:block>
