@@ -5,6 +5,16 @@ from .interfaces import IStory
 from .configure import WARNING_DELTA, WARNING_DELTA_PERCENT
 
 
+def get_timing_status(difference):
+    # TODO: the delta should be a percentage and probably differentiate more
+    difference_status = 'success'
+    if difference < 0:
+        difference_status = 'danger'
+    if difference > WARNING_DELTA:
+        difference_status = 'warning'
+    return difference_status
+
+
 def get_timings(context, portal_catalog=None):
     # TODO: this can be slow: see if it can be asyncronous (via javascript)
     if portal_catalog is None:
@@ -18,24 +28,18 @@ def get_timings(context, portal_catalog=None):
             'path': '/'.join(context.getPhysicalPath()),
             'portal_type': 'Story'
         })
-        estimate = sum([ s.estimate for s in stories ])
+        estimate = sum([s.estimate for s in stories])
     bookings = pc.searchResults({
         'path': '/'.join(context.getPhysicalPath()),
         'portal_type': 'Booking'
     })
-    hours = sum([ b.time for b in bookings ])
-    # TODO: the delta should be a percentage and probably differentiate more
+    hours = sum([b.time for b in bookings])
     difference = estimate - hours
-    difference_status = 'success'
-    if difference < 0:
-        difference_status = 'danger'
-    if difference > WARNING_DELTA:
-        difference_status = 'warning'
     return {
         'estimate': estimate,
         'resource_time': hours,
         'difference': difference,
-        'status': difference_status
+        'time_status': get_timing_status(difference)
     }
 
 
@@ -58,3 +62,13 @@ def get_assignees_details(story):
     assignees = getattr(story, 'assigned_to')
     for user_id in assignees:
         yield get_user_details(story, user_id)
+
+
+def get_epic_by_story(story):
+    epic = None
+    if story.epic and not story.epic.isBroken():
+        epic = {
+            'url': story.epic.to_object.absolute_url(),
+            'title': story.epic.to_object.title
+        }
+    return epic
